Fixed home layout issues.

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -44,6 +44,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 70%;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -61,11 +62,12 @@ h2 {
 .content-container#home {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0;
   width: 70%;
   height: 100vh;
   scroll-margin-top: 60rem;
+  text-align: center;
 }
 
 h1 {
